--- a/NEWS
+++ b/NEWS
@@ -40,6 +40,9 @@ New in 1.5b: 2004-??-??; CVS version 1.5a, Libtool team:
 * libltdl no longer loads shared libraries with global symbol resolution,
   this caused problems when the symbols were intended to be overriden further
   up the stack; it is also not recommended practice.
+* libltdl no longer tries to support multi-threaded programming with
+  lt_dlmutex_register(), which was unusable with POSIX threads anyway.
+  The symbols are deprecated but exported for backwards compatibility.
 * libltdl no longer uses lt_dlmalloc, lt_dlrealloc and lt_dlfree.  The symbols
   are still exported for backwards compatibility.
 * libltdl no longer supports pre-c89 compilers.  Some of the pre89 portability
