--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-29  Peter O'Gorman  <peter@pogma.com>
+
+	* ltmain.in: Fix problem with .libs/.libs/libfoo.so appearing on
+	the link line, reported and fix confirmed by Dan S. Camper.
+	
 2004-04-20  Gary V. Vaughan  <gary@gnu.org>
 
 	* m4/libtool.m4 (_LT_LANG_CXX_CONFIG): Detect Intel C++ compiler
