--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-05  Peter O'Gorman  <peter@pogma.com>
+
+	* m4/libtool.m4 (AC_LIBTOOL_PROG_LD_HARDCODE_LIBPATH): Insert space
+	around = for a test and a comma between runpath_var and $1. Bug
+	reported by Max Bowsher.
+
 2004-04-22  Gary V. Vaughan  <gary@gnu.org>
 
 	* libltdl/argz.h: Moved from here...
