--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-21  Gary V. Vaughan  <gary@gnu.org>
+
+	* tests/tagtrace.test: Forgot to add this file to the repository
+	for Alexandre's 2004-05-16 patch below.
+
 2004-05-18  Peter O'Gorman  <peter@pogma.com>
 
 	* m4/libtool.m4 (AC_LIBTOOL_SYS_DYNAMIC_LINKER): Make this an m4_defun,
