--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* ltmain.sh (check_executable): The WIN32 API and MinGW do not support
+	S_IXOTH and S_IXGRP so use of these modes should be conditional.
+
 2004-05-21  Gary V. Vaughan  <gary@gnu.org>
 
 	* tests/tagtrace.test: Forgot to add this file to the repository
