--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-16  Brad  <brad@comstyle.com>
+
+	* m4/libtool.m4: More improvements to OpenBSD support.
+	* NEWS: Updated.
+
 2004-06-16  Gary V. Vaughan  <gary@gnu.org>
 
 	Automake 1.9 won't have the AC_PROG_EGREP bug (aclocal used to
