--- a/NEWS
+++ b/NEWS
@@ -53,6 +53,7 @@ New in 1.5b: 2004-??-??; CVS version 1.5a, Libtool team:
   latest files.
 * Extracting symbols from an import library on cygwin and win32 now works.
 * Initial support for amigaos-ppc.
+* Improved support for OpenBSD.
 * Support for Intel C++ version 8.0.
 * New support for IBM's xlc and xlc++ on Mac OS X.
 * Finished support for QNX RTOS.
