--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-07  Peter O'Gorman  <peter@pogma.com>
+
+	* libltdl/ltdl.h: Undo inadvertent changes from the last commit.
+
 2004-06-24  Noah Misch  <noah@cs.caltech.edu>
 
 	* ltmain.in: Unset the zsh GLOB_SUBST option, which makes zsh
