--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-07  Brad <brad@comstyle.com>
+
+	* libtool.m4: Fixes for the OpenBSD support
+
 2004-07-07  Peter O'Gorman  <peter@pogma.com>
 
 	* libltdl/ltdl.h: Undo inadvertent changes from the last commit.
