--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-07  Brad <brad@comstyle.com>
+
+	* m4/libtool.m4: Fixes for the OpenBSD support
+
 2004-06-24  Noah Misch  <noah@cs.caltech.edu>
 
 	* ltmain.in: Unset the zsh GLOB_SUBST option, which makes zsh
